# QuantLab

AvellanedaStoikovMME/: .gitignore  Avellaneda_Stoikov_Market_Making_Engine.ipynb  pyproject.toml
AvellanedaStoikovMME/src/: ASEngine.py  MLECalibrationSimulation.py  MLECalibrator.py  RegimeSimulator.py  simulation.py
