[project]
name = "AvellanedaStoikovMME"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbconvert[webpdf]>=7.17.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]

[tool.pyright]
include = ["./", "src"]
exclude = [".venv", "**/.*", "**/dist", "**/node_modules", "**/__pycache__"]
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
